--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <span style="color: var(--muted); font-size: 0.9rem"
               >または直接:
               <a id="email-plain" class="email" href="#"
-                >contact@cronpy.com</a
+                >cronpy@proton.com</a
               ></span
             >
           </div>
@@ -209,7 +209,7 @@
         { username: "AxelCipher20", name: "AxelCipher", role: "" },
       ];
 
-      const contactEmail = "contact@cronpy.com";
+      const contactEmail = "cronpy@proton.com";
 
       document.getElementById("year").textContent = new Date().getFullYear();
 
