--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>cronpy - メンバー紹介</title>
+    <title>Team Cronpy</title>
     <meta name="description" content="チーム紹介ページ（素のHTML/CSS/JS）" />
     <style>
       :root {
