--- a/index.html
+++ b/index.html
@@ -1,397 +1,13 @@
-<!DOCTYPE html>
-<html lang="ja">
+<!doctype html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Team Cronpy</title>
-    <meta
-      name="description"
-      content="チーム紹介ページ（多言語対応・HTML/CSS/JS）"
-    />
-    <style>
-      :root {
-        --bg: #0f1724;
-        --card: #0b1220;
-        --muted: #94a3b8;
-        --accent: #7dd3fc;
-      }
-      * {
-        box-sizing: border-box;
-      }
-      body {
-        margin: 0;
-        font-family: Inter, ui-sans-serif, system-ui, Segoe UI, Roboto,
-          "Helvetica Neue", Arial;
-        background: linear-gradient(180deg, #020617 0%, #071125 100%);
-        color: #e6eef8;
-        line-height: 1.45;
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-      }
-
-      /* 🌐 言語切替ボタン（改良版） */
-      #lang-toggle {
-        position: fixed;
-        top: 20px;
-        right: 40px; /* ← 少し内側に */
-        z-index: 200;
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        background: linear-gradient(
-          90deg,
-          rgba(125, 211, 252, 0.25),
-          rgba(56, 189, 248, 0.25)
-        );
-        border: 1px solid rgba(125, 211, 252, 0.5);
-        color: #e6f3ff;
-        padding: 10px 18px;
-        border-radius: 12px;
-        cursor: pointer;
-        font-size: 0.95rem;
-        font-weight: 500;
-        backdrop-filter: blur(6px);
-        box-shadow: 0 4px 14px rgba(0, 0, 0, 0.4);
-        transition: all 0.3s ease;
-      }
-
-      #lang-toggle:hover {
-        background: linear-gradient(
-          90deg,
-          rgba(125, 211, 252, 0.45),
-          rgba(56, 189, 248, 0.45)
-        );
-        transform: translateY(-2px);
-        box-shadow: 0 6px 20px rgba(56, 189, 248, 0.25);
-      }
-
-      /* 📱 モバイル対応 */
-      @media (max-width: 640px) {
-        #lang-toggle {
-          position: relative;
-          right: auto;
-          top: auto;
-          margin: 20px auto 0;
-          display: inline-flex;
-        }
-      }
-
-      .wrap {
-        max-width: 980px;
-        margin: 60px auto 40px;
-        padding: 24px;
-        flex: 1;
-      }
-      header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        gap: 16px;
-        animation: fadeIn 1s ease-in-out;
-      }
-      h1 {
-        margin: 0;
-        font-size: 1.8rem;
-        background: linear-gradient(90deg, var(--accent), #38bdf8);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
-
-      /* 🧑‍💻 メンバー紹介 */
-      .grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-        gap: 16px;
-        margin-top: 24px;
-      }
-      .card {
-        background: linear-gradient(
-          180deg,
-          rgba(255, 255, 255, 0.04),
-          rgba(255, 255, 255, 0.02)
-        );
-        border: 1px solid rgba(255, 255, 255, 0.06);
-        padding: 16px;
-        border-radius: 12px;
-        display: flex;
-        gap: 12px;
-        align-items: center;
-        transition: transform 0.3s ease, box-shadow 0.3s ease;
-        animation: fadeUp 0.6s ease forwards;
-        opacity: 0;
-      }
-      .card:hover {
-        transform: translateY(-6px) scale(1.02);
-        box-shadow: 0 6px 20px rgba(125, 211, 252, 0.15);
-      }
-      .avatar {
-        width: 64px;
-        height: 64px;
-        border-radius: 12px;
-        overflow: hidden;
-        background: #071226;
-        display: grid;
-        place-items: center;
-      }
-      .avatar img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-      .meta {
-        flex: 1;
-      }
-      .name {
-        font-weight: 600;
-        margin: 0;
-      }
-      .role {
-        color: var(--muted);
-        margin: 4px 0 0;
-        font-size: 0.9rem;
-      }
-      .links {
-        margin-top: 8px;
-        display: flex;
-        gap: 8px;
-        align-items: center;
-      }
-      .btn {
-        display: inline-flex;
-        gap: 6px;
-        align-items: center;
-        padding: 6px 10px;
-        border-radius: 8px;
-        border: 1px solid rgba(255, 255, 255, 0.06);
-        background: rgba(255, 255, 255, 0.02);
-        text-decoration: none;
-        color: inherit;
-        font-size: 0.9rem;
-        transition: background 0.3s ease, transform 0.2s ease;
-      }
-      .btn:hover {
-        background: rgba(125, 211, 252, 0.15);
-        transform: translateY(-2px);
-      }
-
-      /* 💪 強み */
-      .strength-item {
-        margin-top: 24px;
-        opacity: 0;
-        transform: translateY(20px);
-        transition: opacity 0.8s ease, transform 0.8s ease;
-      }
-      .strength-item.visible {
-        opacity: 1;
-        transform: translateY(0);
-      }
-
-      footer {
-        margin-top: auto;
-        padding: 16px 24px;
-        border-top: 1px solid rgba(255, 255, 255, 0.05);
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        gap: 12px;
-        font-size: 0.9rem;
-        color: var(--muted);
-      }
-
-      @keyframes fadeUp {
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
-    </style>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>cronpy-website</title>
   </head>
   <body>
-    <button id="lang-toggle">🇯🇵 日本語</button>
-
-    <div class="wrap">
-      <header>
-        <h1>Team Cronpy</h1>
-      </header>
-
-      <main>
-        <!-- 🧑‍💻 メンバー紹介 -->
-        <section id="team">
-          <h2 data-i18n="team_title">メンバー紹介</h2>
-          <div class="grid" id="members"></div>
-        </section>
-
-        <!-- 💪 チームの強み -->
-        <section id="strengths">
-          <h2 data-i18n="strengths_title">チームの強み</h2>
-          <div class="strength-item">
-            <h3 data-i18n="strength_1_title">高い技術力</h3>
-            <p data-i18n="strength_1_text">
-              最新の技術を素早く取り入れ、堅牢なシステムを構築します。
-            </p>
-          </div>
-          <div class="strength-item">
-            <h3 data-i18n="strength_2_title">迅速な対応</h3>
-            <p data-i18n="strength_2_text">
-              小規模ながらもフットワーク軽く、柔軟な開発が可能です。
-            </p>
-          </div>
-          <div class="strength-item">
-            <h3 data-i18n="strength_3_title">セキュリティ意識</h3>
-            <p data-i18n="strength_3_text">
-              セキュリティを第一に考えた設計とレビューを徹底しています。
-            </p>
-          </div>
-        </section>
-
-        <!-- 📩 問い合わせ -->
-        <section id="contact">
-          <h2 data-i18n="contact_title">問い合わせ</h2>
-          <p data-i18n="contact_text">
-            ご相談がありましたら、下記のボタンまたはメールアドレスまでお問い合わせください。
-          </p>
-          <div class="contact">
-            <a id="mailto-btn" class="btn" href="#">📧 メールで問い合わせ</a>
-            <span style="color: var(--muted); font-size: 0.9rem">
-              または直接:
-              <a id="email-plain" class="email" href="#">cronpy@proton.com</a>
-            </span>
-          </div>
-        </section>
-      </main>
-    </div>
-
-    <footer>
-      <div>© <span id="year"></span> Team Cronpy</div>
-    </footer>
-
-    <script>
-      const teamMembers = [
-        { username: "nmcliant", name: "nmcliant", role: "" },
-        { username: "AxelCipher20", name: "AxelCipher", role: "" },
-      ];
-
-      const contactEmail = "cronpy@proton.com";
-      document.getElementById("year").textContent = new Date().getFullYear();
-
-      const membersEl = document.getElementById("members");
-      function createMemberCard(m, index) {
-        const card = document.createElement("article");
-        card.className = "card";
-        card.style.animationDelay = `${index * 0.1}s`;
-
-        const avatar = document.createElement("div");
-        avatar.className = "avatar";
-        const img = document.createElement("img");
-        img.src = `https://github.com/${encodeURIComponent(
-          m.username
-        )}.png?size=200`;
-        img.alt = `${m.name} さんのアバター`;
-        img.loading = "lazy";
-        avatar.appendChild(img);
-
-        const meta = document.createElement("div");
-        meta.className = "meta";
-
-        const name = document.createElement("h3");
-        name.className = "name";
-        name.textContent = m.name;
-
-        const role = document.createElement("div");
-        role.className = "role";
-        role.textContent = m.role || "";
-
-        const links = document.createElement("div");
-        links.className = "links";
-
-        const gh = document.createElement("a");
-        gh.className = "btn";
-        gh.href = `https://github.com/${encodeURIComponent(m.username)}`;
-        gh.target = "_blank";
-        gh.rel = "noopener noreferrer";
-        gh.innerHTML = `🐙 @${m.username}`;
-
-        links.appendChild(gh);
-        meta.appendChild(name);
-        meta.appendChild(role);
-        meta.appendChild(links);
-        card.appendChild(avatar);
-        card.appendChild(meta);
-        return card;
-      }
-      teamMembers.forEach((m, i) =>
-        membersEl.appendChild(createMemberCard(m, i))
-      );
-
-      const mailtoBtn = document.getElementById("mailto-btn");
-      const emailPlain = document.getElementById("email-plain");
-      mailtoBtn.href = `mailto:${contactEmail}?subject=${encodeURIComponent(
-        "お問い合わせ - Team Cronpy"
-      )}`;
-      emailPlain.href = `mailto:${contactEmail}`;
-      emailPlain.textContent = contactEmail;
-
-      const observer = new IntersectionObserver(
-        (entries) =>
-          entries.forEach(
-            (e) => e.isIntersecting && e.target.classList.add("visible")
-          ),
-        { threshold: 0.1 }
-      );
-      document
-        .querySelectorAll(".strength-item")
-        .forEach((el) => observer.observe(el));
-
-      const translations = {
-        en: {
-          team_title: "Team Members",
-          strengths_title: "Our Strengths",
-          contact_title: "Contact",
-          contact_text:
-            "You can contact us via email. Click the button below to open your mail app.",
-          strength_1_title: "Technical Excellence",
-          strength_1_text:
-            "We adopt new technologies quickly and build robust systems.",
-          strength_2_title: "Agile Response",
-          strength_2_text:
-            "Our compact team enables fast and flexible development.",
-          strength_3_title: "Security Mindset",
-          strength_3_text:
-            "We prioritize security in every stage of our process.",
-        },
-        ja: {
-          team_title: "メンバー紹介",
-          strengths_title: "チームの強み",
-          contact_title: "問い合わせ",
-          contact_text:
-            "ご相談がありましたら、下記のボタンまたはメールアドレスまでお問い合わせください。",
-          strength_1_title: "高い技術力",
-          strength_1_text:
-            "最新の技術を素早く取り入れ、堅牢なシステムを構築します。",
-          strength_2_title: "迅速な対応",
-          strength_2_text:
-            "小規模ながらもフットワーク軽く、柔軟な開発が可能です。",
-          strength_3_title: "セキュリティ意識",
-          strength_3_text:
-            "セキュリティを第一に考えた設計とレビューを徹底しています。",
-        },
-      };
-
-      let currentLang = "ja";
-      const toggleBtn = document.getElementById("lang-toggle");
-      toggleBtn.addEventListener("click", () => {
-        currentLang = currentLang === "ja" ? "en" : "ja";
-        document.documentElement.lang = currentLang;
-        toggleBtn.textContent =
-          currentLang === "ja" ? "🇯🇵 日本語" : "🇺🇸 English";
-        document.querySelectorAll("[data-i18n]").forEach((el) => {
-          const key = el.getAttribute("data-i18n");
-          if (translations[currentLang][key]) {
-            el.textContent = translations[currentLang][key];
-          }
-        });
-      });
-    </script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
